# Simple-Notepad-with-QT

./: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  FileManager.cpp  FileManager.h  LoginPage.qml  Main.qml  NotepadPage.qml  README.md  main.cpp
